# flag

./: Makefile  README.md  pyproject.toml  requirements.txt
flag/: __main__.py
flag/interface/: __init__.py  lexer.py  parser.py
flagg/: __main__.py
flagg/handlers/: __init__.py  cli.py
flagg/interface/: __init__.py  lexer.py  parser.py  symbol_table.py
flagg/utils/: dataclasses.py  errors.py
samples/dummy/: dummy.automata.json  dummy.code  dummy.lexer.json
samples/expressions/: expressions.code  expressions.lexer.json
samples/lcc/: lcc.lexer.json  prof.code  sample_1.code
samples/simple/: simple.automata.json  simple.code  simple.lexer.json
tests/: test_flag.py  test_sample_code.py
