[tool.poetry]
name = "flag"
version = "0.1.0"
description = "Formal Languages Analyzer Generator"
authors = ["João Vitor Maia <maia.tostring@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
autome = {path = "../autome"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
