[tool.poetry]
name = "flagg"
version = "0.2.0"
description = "Formal Languages Analyzer Generator"
authors = ["João Vitor Maia <maia.tostring@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
autome = "0.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
